# Data-Parser-and-Benchmarking-Models-Smart-Bridge-and-other-Bridge-Datasets

./: README.md
p-bim-models-main (3)/p-bim-models-main/: .gitignore  Dockerfile  README.md  pyproject.toml
p-bim-models-main (3)/p-bim-models-main/configs/local/prediction/: pbim-gan.yml  qgs.yml  z24-gan.yml
p-bim-models-main (3)/p-bim-models-main/configs/sweeps/qgs/: agcrn.yml  base.yml  mlp.yml  mtgnn.yml  stgcn.yml  (+3 more)
p-bim-models-main (3)/p-bim-models-main/k8s/: deploy_agents.sh  dev_pod.yml  evaluate_model.py  evaluate_model.sh  evaluate_model_job_template.yml  predict_model.sh  predict_model_job_template.yml  sweep_agent_job_template.yml  train_model.sh  train_model_job_template.yml  train_multiple.sh
p-bim-models-main (3)/p-bim-models-main/pbim_models/: util.py
p-bim-models-main (3)/p-bim-models-main/pbim_models/cli/: cli.py  evaluate.py  predict.py  predict_gan.py  sweep.py  train.py  util.py
p-bim-models-main (3)/p-bim-models-main/pbim_models/dataset/: anomaly.py  dataset.py  index.py  model.py  transform.py  util.py
p-bim-models-main (3)/p-bim-models-main/pbim_models/metrics/: metric.py
p-bim-models-main (3)/p-bim-models-main/pbim_models/models/: util.py
p-bim-models-main (3)/p-bim-models-main/pbim_models/module/: module.py  util.py
p-bim-models-main (3)/p-bim-models-main/scripts/: build.sh  delete_failed_runs.py  evaluate.sh  evaluate_gan.sh  generate_gan_eval_configs.py  predict.sh  retrive_run_ids.py  sweep.sh  train.sh
p-bim-models-main (3)/p-bim-models-main/templates/: evaluate_gan_config_template.yml  evaluate_gan_job_template.yml
(+214 files in other folders)
