[tool.poetry]
name = "p-bim-models"
version = "0.1.0"
description = "A collection of models to be trained on the p-bim data"
authors = ["Johannes Kohlmann <johannes.kohlmann@stud-mail.uni-wuerzburg.de>"]
readme = "README.md"
packages = [{include = "pbim_models"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "1.13.1"
numpy = "^1.23.5"
dataclasses-json = "^0.5.7"
pyyaml = "^6.0"
pytorch-lightning = "^1.8.5"
wandb = "^0.14.2"
torchmetrics = "^0.11.0"
tqdm = "^4.64.1"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
jinja2 = "^3.1.2"



[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
